# mr-manager

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.github/workflows/: release.yml
src-tauri/capabilities/: default.json
src-tauri/src/: git.rs  lib.rs  main.rs
src/components/: app-sidebar.tsx  folder-list.tsx  folder-picker.tsx  folder-toggle.tsx  header.tsx  preview-doc.tsx  sub-header.tsx  type-doc-generation.tsx
src/components/git-components/: commit-details-dialog.tsx  commit-details.tsx  commit-list.tsx  commit-monitor.tsx  diff-viewer.tsx  error-alert.tsx  folder-view.tsx  git-references.tsx  notification-settings.tsx  reload-button.tsx
src/components/ui/: scroll-area.tsx
src/hooks/: useCommitData.tsx  useDocGenerator.tsx  useFolderData.ts  useFolderLoader.tsx  useFolderWithType.tsx  useGithubHistory.tsx  useWindowEvent.ts
src/lib/: notification-sound.ts  utils.ts
src/store/: gitHistory.ts  index.ts
src/types/: index.ts
src/utils/: git.ts
src/view/: Apps.tsx  Docs.tsx  GitHistory.tsx  Track.tsx
